<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context="pe.edu.sise.appportales.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_portales"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/lblEditText1"
                android:textAlignment="center"
                android:drawableLeft="@drawable/ic_user"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEditText2"
                android:textAlignment="center"
                android:drawableLeft="@drawable/ic_contrasena"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblbutton3"
                    style="@android:style/Widget.Button.Small"
                    android:textColor="@color/write"
                    android:background="@drawable/redondeo"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/lblbutton4"
                    style="@android:style/Widget.Button.Small"
                    android:textColor="@color/write"
                    android:drawableLeft="@drawable/ic_face"
                    android:background="@drawable/redondeo_azul"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblbutton5"
                    style="@android:style/Widget.ActionButton"
                    android:drawableLeft="@drawable/ic_googlemas"
                    android:textColor="@color/write"
                    android:background="@drawable/redondeo_rojo"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/lblTextView3"
                    android:gravity="center"/>

            </LinearLayout>



        </LinearLayout>





    </LinearLayout>


</LinearLayout>
